# Poseidon-LLM---lite

./: README.md  poseidon_architecture.drawio
poseidon-core/: pyproject.toml
poseidon-core/config/: ai_context_mapping.yaml  connect_llm.yaml  email_config.yaml  employee_task_payload.yaml  feature_flags.yaml  logging_config.yaml  onedrive_config.yaml  requirements-no-deps.txt  requirements.txt  task_orchestrator.yaml
poseidon-core/docs/: poseidon_system_documentation.md  sample_orchestration_debrief.md
poseidon-core/docs/howto/: run_agent_chat_ui.md  run_prefect_flows.md
poseidon-core/evaluation/: __init__.py
poseidon-core/src/: main.py
poseidon-core/src/poseidon/: __init__.py  cli.py
poseidon-core/src/poseidon/agents/: __init__.py  accounting_agent.py  base_agent.py  comms_agent.py  inference_agent.py  logistics_agent.py  manufacturing_agent.py  purchasing_agent.py  registry.py  sales_agent.py  supervisor.py  task_catalog.py  task_orchestrator_agent.py  task_response_listener.py  task_signals.py
poseidon-core/tuning/: README.md
poseidon-core/tuning/data/: README.md  generate_synthetic.py
poseidon-core/tuning/eval/: __init__.py  gate_checker.py  metrics.py  runner.py  validate_dpo.py  validate_sft.py
poseidon-core/tuning/gates/: standard_v1.yaml
poseidon-core/tuning/recipes/: README.md  __init__.py  run_recipe.py
poseidon-core/tuning/rlhf/: README.md  bootstrap_dpo.py
poseidon-core/tuning/runs/: README.md
poseidon-core/tuning/suites/: core_functional_v1.yaml  safety_redteam_v1.yaml  suite_manifest_template.yaml
(+144 files in other folders)
